[metadata]
name = fuzzy-sql
version = 0.0.2
author = Samer Kababji
author-email = skababji@ehealthinformation.ca
description = A generator of random SQL SELECT queries mainly to compare responses from a real dataset against that from a synthetic dataset.  
long_description = file: README.md
long_description_content_type = text/markdown
keywords=python, sql, random, synthetic, ML, clinical trials
classifiers=
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.7
install_requires = 
    pip
    pandas
    numpy
    scikit-learn
    datetime
    pathlib
    python-pdfkit
    matplotlib
    seaborn
    sqlite3
    json
    os
    jupyterlab

[options.packages.find]
where = src

