[metadata]
name = fuzzy-sql
version = 0.0.4
author = Samer Kababji
author-email = skababji@ehealthinformation.ca
description = A generator of random SQL SELECT queries mainly to compare responses from a real dataset against that from a synthetic dataset.  
long_description = file: README.md
long_description_content_type = text/markdown
keywords=python, sql, random, synthetic, ML, clinical trials
classifiers=
    Programming Language :: Python :: 3
    Operating System :: POSIX :: Linux
    
[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.7
install_requires = 
    jupyter
    scikit-learn
    pandas
    pdfkit
    seaborn


[options.packages.find]
where = src

